--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ body {
   z-index: 1;
   top: 10%;
   left: 50%;
-  margin-top: 60px;
+  margin-top: 20px;
   margin-left: -150px;
   width: 300px;
   height: 350px;
@@ -44,7 +44,7 @@ body {
 
 .content .logo{
   height: 300px;
-  width: 300px;
+  width: 350px;
 }
 
 .content .title{
@@ -91,13 +91,13 @@ body {
 }
 
 .bg-light{
-  background: #D7FDEC;
+  background: #A4B494;
   color:  rgba(47,47,47);
 }
 
 .bg-dark{
   background: rgba(47,47,47);
-  color: #D7FDEC;
+  color: #A4B494;
 }
 
 footer{
